fixed css issues, aligned things center

--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,10 @@ body {
     background-size: cover;
 }
 
+.buttons {
+    text-align: center;
+}
+
 .thumbnail {
     background-color: rgba(255, 255, 255, 0.36);
     border: none;
